--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>le site de babasque</title>
 </head>
 <body>
-    <h1>le titre de babasque</h1>
-    <p>ceci est mon paragraphe</p>
+    <h1>le site de babasque et lalai</h1>
+<h2>le web dynamique</h2>
+    <p>il existe 2 type de site différent. le web statique et le web dynamique. 
+        un site internet dynamique permet de modifier son site beaucoup plus rapidement et plus facilement </p>
 </body>
 </html>
