--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>le site de babasque et lalai</h1>
-<h2>le web dynamique</h2>
+<h2>le web dynamique test</h2>
     <p>  il existe 2 type de site différent. le web statique et le web dynamique. 
     <ul> <li> un site internet dynamique permet de modifier son site beaucoup plus rapidement et plus facilement   </li>
     <li> un site internet statique est composé de pages statique, qui ne peuvent pas être modifier par n'importe qui. ce n'est pas pour autant qu'il n'y a pas d'animations ( flash,images,vidéos,..</li></ul> <h3>
