--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <title>le site de babasque</title>
 </head>
 <body>
-    <h1>le site de babasque et lalai</h1>
+    <h1>mon premier site</h1>
 <h2><u>le web dynamique </u></h2>
     <p>  il existe 2 types de site différent. le web statique et le web dynamique. 
     <h3>Sur ce site, on va vous parler plus précisément de web dynamique </h3></p>
      <p>un site dynamique suit un objectif concret : celui d’adapter les informations qui sont affichées en fonction de l’utilisateur qui demande à les voir. Son affichage et les informations partagées dépendront ainsi
          d’un éventuel formulaire rempli par l’internaute de ses préférences et publicités ciblées... Cela signifie que vos utilisateurs n’auront pas tous le même aperçu de la page web dynamique. Par exemple, Facebook est 
          un site internet dynamique, qui change et s’actualise en fonction des dernières publications et des préférences de l’utilisateur. <img scr="https://www.tomsguide.fr/content/uploads/sites/2/2018/11/fb-insta-750x563.jpg" width="400" ></p>
-<h4> languages qui permettent de rendre un site dynamique </h4>
-<p>Quel que soit le type de site web que vous souhaitez créer, HTML et CSS sont donc indispensables puisque ces langages sont la base de tous sites web. Cependant, ils ne suffisent pas pour la création de sites dynamiques. Il faut les compléter avec d’autres langages.
+<p><h4> languages qui permettent de rendre un site dynamique </h4>
+Quel que soit le type de site web que vous souhaitez créer, HTML et CSS sont donc indispensables puisque ces langages sont la base de tous sites web. Cependant, ils ne suffisent pas pour la création de sites dynamiques. Il faut les compléter avec d’autres langages.
     <lu><li>     PHP : langage que seuls les serveurs comprennent et qui permet de rendre votre site dynamique. C’est lui qui « génère » la page web. Il peut fonctionner seul mais il est plus efficace quand il est combiné à MySQL </li>
-    <li>     MySQL : système de gestion de bases de données. Il enregistre et organise les données (liste des membres, messages sur le blog…) pour vous aider à les retrouver plus facilement. </li></lu> </p> </body>
+    <li>     MySQL : système de gestion de bases de données. Il enregistre et organise les données (liste des membres, messages sur le blog…) pour vous aider à les retrouver plus facilement. </li></lu> </p>
+<p><h4> utilité d'un site internet dynamique </h4>
+    Les pages dynamiques sont particulièrement efficaces pour répondre au besoin de personnalisation sur un site, pour offrir à chaque internaute un contenu adapté sur-mesure. Voici une petite liste d’exemples :
+<lu><li>    Catalogue en ligne : le client sélectionne ses paramètres  (taille, couleur, prix…). Selon ses paramètres, une page « sur mesure » est créée.  </li>
+<li> les jeux en lignes </li>
+<li> les moteurs de recherche : les pages de résultats qu'ils proposent sont adaptées aux recherches des internautes </li></lu></p> </body>
 </html>
