--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@ Quel que soit le type de site web que vous souhaitez créer, HTML et CSS sont do
 <p><h4>- Lien entre le client et le serveur</h4>
     Les sites Web dynamiques utilisent les scripts côté client pour préparer une conception dynamique et du code côté serveur pour gérer les événements, gérer les sessions et les cookies, et stocker et récupérer les données de la base de données.
 </p> 
-<p> Lien vers le site de Laïs<a href="https://lalaiham.github.io/mon_premier_site/"</p></body>
+<p><a href="https://lalaiham.github.io/mon_premier_site/">Lien vers le site de Laïs</a></p></body>
 </html>
