--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
      <p>Un site dynamique suit un objectif concret : celui d’adapter les informations qui sont affichées en fonction de l’utilisateur qui demande à les voir. Son affichage et les informations partagées dépendront ainsi
          d’un éventuel formulaire rempli par l’internaute de ses préférences et publicités ciblées... Cela signifie que vos utilisateurs n’auront pas tous le même aperçu de la page web dynamique. Par exemple, Facebook est 
          un site internet dynamique, qui change et s’actualise en fonction des dernières publications et des préférences de l’utilisateur.</p>
-<p><h4 style="color :burlywood">- Languages qui permettent de rendre un site dynamique </h4>
+<p><h4 style="color :burlywood"><u>- Languages qui permettent de rendre un site dynamique</u> </h4>
 Quel que soit le type de site web que vous souhaitez créer, HTML et CSS sont donc indispensables puisque ces langages sont la base de tous sites web. Cependant, ils ne suffisent pas pour la création de sites dynamiques. Il faut les compléter avec d’autres langages.
     <lu><li><u> PHP : </u>langage que seuls les serveurs comprennent et qui permet de rendre votre site dynamique. C’est lui qui « génère » la page web. Il peut fonctionner seul mais il est plus efficace quand il est combiné à MySQL </li>
     <li><u>MySQL :</u> système de gestion de bases de données. Il enregistre et organise les données (liste des membres, messages sur le blog…) pour vous aider à les retrouver plus facilement. </li></lu> </p>
-<p><h4 style="color :burlywood">- Utilité d'un site internet dynamique </h4>
+<p><h4 style="color :burlywood"><u>- Utilité d'un site internet dynamique</u> </h4>
     Les pages dynamiques sont particulièrement efficaces pour répondre au besoin de personnalisation sur un site, pour offrir à chaque internaute un contenu adapté sur-mesure. Voici une petite liste d’exemples :
 <lu><li><u> Catalogue en ligne :</u> le client sélectionne ses paramètres  (taille, couleur, prix…). Selon ses paramètres, une page « sur mesure » est créée.  </li>
 <li> <u>les jeux en lignes</u> </li>
 <li> <u>les moteurs de recherche :</u> les pages de résultats qu'ils proposent sont adaptées aux recherches des internautes </li></lu></p>
-<p><h4 style="color :burlywood">- Lien entre le client et le serveur</h4>
+<p><h4 style="color :burlywood"><u>- Lien entre le client et le serveur</u></h4>
     Les sites Web dynamiques utilisent les scripts côté client pour préparer une conception dynamique et du code côté serveur pour gérer les événements, gérer les sessions et les cookies, et stocker et récupérer les données de la base de données.
 </p> 
 <p><a href="https://lalaiham.github.io/mon_premier_site/">Lien vers le site de Laïs</a></p></body>
