--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Quel que soit le type de site web que vous souhaitez créer, HTML et CSS sont do
 <li> <u>les jeux en lignes</u> </li>
 <li> <u>les moteurs de recherche :</u> les pages de résultats qu'ils proposent sont adaptées aux recherches des internautes </li></lu></p>
 <p><h4 style="color :olivedrab"><u>- Lien entre le client et le serveur</u></h4>
-    Les sites Web dynamiques utilisent les scripts côté client pour préparer une conception dynamique et du code côté serveur pour gérer les événements, gérer les sessions et les cookies, et stocker et récupérer les données de la base de données.
-<img src="https://www.zonensi.fr/NSI/Premiere/C08/ClientServeur.png"></p> 
+    Les sites Web dynamiques utilisent les scripts côté client pour préparer une conception dynamique et du code côté serveur pour gérer les événements, gérer les sessions et les cookies, et stocker et récupérer les données de la base de données.</p>
+<img src="https://www.zonensi.fr/NSI/Premiere/C08/ClientServeur.png">
 <p><a href="https://lalaiham.github.io/mon_premier_site/">Lien vers le site de Laïs</a></p></body>
 </html>
